--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
     font-family:Sans-Serif;
     background: hsl(212, 45%, 89%);
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 main{
@@ -23,6 +22,9 @@ main{
     /*grid-template-rows: 2fr 1fr 1fr;*/
     padding: 1rem 1rem;
     border-radius: 1.5rem;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
 }
 main img{
     width: 100%;
